Bug 79972 - FILEOPEN: XLS/XLSX - Hyperlink document path not imported correctly for numeric content cells
Summary: FILEOPEN: XLS/XLSX - Hyperlink document path not imported correctly for numer...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.1.0.4 release
Hardware: Other All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: BSA target:6.3.0
Keywords: filter:xlsx
: 91691 (view as bug list)
Depends on:
Blocks: XLSX-Hyperlink
  Show dependency treegraph
 
Reported: 2014-06-13 08:34 UTC by Max
Modified: 2019-05-24 13:10 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments
Source file (79.00 KB, application/vnd.ms-excel)
2014-06-16 06:21 UTC, Max
Details
After saving (42.50 KB, application/vnd.ms-excel)
2014-06-16 06:21 UTC, Max
Details
Minimal source file (9.51 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2016-12-19 23:41 UTC, Bartosz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Max 2014-06-13 08:34:28 UTC
Hello to everybody,
In our company we are introducing Libreoffice and we have a trouble with hyperlink because we use both MS excel and LO calc.
We have some users that use Excel files (created in the last years) and inside there are Hyperlink to files (usually .doc or picture ).
If another user using LO calc update those MS excel files any Hyperlink are lost. (After the saving when reopen the Excel or Calc  the hyperlink no longer exist )

Are there anybody with that trouble ?
Do you know how to fix it ?

Thank you very much for any help 

Operating System: Windows 7
Version: 4.2.4.2 release
Comment 1 Yousuf Philips (jay) (retired) 2014-06-15 00:29:54 UTC
Hi Max,

I created an .xlsx file in excel 2013 and then opened it LibreOffice 4.2.4 and then modified the file and the hyperlinks were retained. If you could send us a file that was created in excel and then a modified version of the file which was outputted from libreoffice where the hyperlinks are lost, we can investigate this further.
Comment 2 Max 2014-06-16 06:21:25 UTC Comment hidden (obsolete)
Comment 3 Max 2014-06-16 06:21:47 UTC Comment hidden (obsolete)
Comment 4 Max 2014-06-16 06:27:35 UTC Comment hidden (obsolete)
Comment 5 Max 2014-06-16 06:28:20 UTC
Comment on attachment 101141 [details]
After saving

After saving , in colum 1 it is missing the hyperlink.
Comment 6 Max 2014-06-16 06:31:26 UTC
(In reply to comment #2)
> Created attachment 101140 [details]
> Source file

Hy Jay,
I have attached the files.
Orig_max.xsl , source file created with excel , see colum 1 with hyperlink and after_max.xls after a saving.

Thank you for any help ypou can give me.

Massimo
Comment 7 Max 2014-06-17 06:44:30 UTC
(In reply to comment #1)
> Hi Max,
> 
> I created an .xlsx file in excel 2013 and then opened it LibreOffice 4.2.4
> and then modified the file and the hyperlinks were retained. If you could
> send us a file that was created in excel and then a modified version of the
> file which was outputted from libreoffice where the hyperlinks are lost, we
> can investigate this further.


I found out that the problem occurs when the cell that contains the cell has a numeric value like Hyperlink.
If I put a text for the hyperlink , that look fine.

Massimo
Comment 8 penttila 2014-08-03 20:41:58 UTC
I can confirm that hiperlinks are lost after saving the file to .xls (MS Excel 97/2000/XP/2003) format and opening it again.

LinuxMint 17 Cinnamon
LO  4.2.4.2 Build id.: 420m0(Build:2)
Comment 9 Yousuf Philips (jay) (retired) 2014-08-03 23:28:11 UTC
Confirmed this effects 4.1.6, 4.2.5, 4.2.7, 4.3.1 and master on Linux.
Comment 10 tommy27 2015-08-19 16:12:19 UTC
reproducible with LibO 4.1.04, 5.0.0.4 and recent 5.1.0.0 alpha under Win8.1 x64
Comment 11 Yousuf Philips (jay) (retired) 2015-08-19 16:46:08 UTC
Versions before 4.1 do not detect that there is a hyperlink in column 1 and 4.1 and above dont import it correctly as opening the hyperlink dialog while selecting the cell or the cell text doesnt switch to the dialog's Document tab or show the hyperlink path.

Version: 5.1.0.0.alpha1+
Build ID: 5d6ef74eea5d73b8cd17f313ad87138d56dc76ce
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2015-08-18_01:28:44
Locale: en-US (en_US.UTF-8)
Comment 12 Robinson Tryon (qubit) 2015-12-09 16:46:57 UTC Comment hidden (no-value, obsolete)
Comment 13 Bartosz 2016-12-19 23:41:01 UTC
Created attachment 129794 [details]
Minimal source file
Comment 14 Yousuf Philips (jay) (retired) 2017-07-02 21:26:28 UTC
Eike: I'm assuming this is an import bug, can you confirm?
Comment 15 Timur 2017-08-08 15:41:10 UTC
LO opens original document (i.e. minimal file) with working hyperlinks. But Insert-Hyperlink on those cells doesn't show document or internet path. Probably that's why it's not clear whether this is actually an import bug. 
If we save as XLSX or XLS, MSO surely can't open those hyperlinks.
Already noticed this is for numeric content cells, so I add that back to title.
Comment 16 QA Administrators 2018-08-09 02:35:15 UTC Comment hidden (obsolete)
Comment 17 Timur 2018-08-09 09:15:03 UTC
Repro 6.2+.
Comment 18 Gabor Kelemen (Collabora) 2019-03-14 11:54:23 UTC
*** Bug 91691 has been marked as a duplicate of this bug. ***
Comment 19 Commit Notification 2019-05-24 13:10:55 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/ff634cf62a663c1e6e744cedf26d9746b235721d%5E%21

tdf#79972 XLSX export: fix hyperlink at numeric data

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.