tdf#79972 XLSX export: fix hyperlink at numeric data

Hyperlink at numeric data lost after export.

tdf79972.xlsx: Test file from Excel 2016.

Change-Id: I6064724e6e38325386c4dfc8f1e9d93cce041975
Reviewed-on: https://gerrit.libreoffice.org/72894
Reviewed-by: László Németh <nemeth@numbertext.org>
Tested-by: László Németh <nemeth@numbertext.org>
Tested-by: Jenkins