sc/qa/unit/subsequent_export-test.cxx
@@ -222,6 +222,7 @@ public:
     void testTdf112567();
     void testTdf123645XLSX();
     void testTdf125173XLSX();
+    void testTdf79972XLSX();
 
     void testXltxExport();
 
@@ -349,6 +350,7 @@ public:
     CPPUNIT_TEST(testTdf112567);
     CPPUNIT_TEST(testTdf123645XLSX);
     CPPUNIT_TEST(testTdf125173XLSX);
+    CPPUNIT_TEST(testTdf79972XLSX);
 
     CPPUNIT_TEST(testXltxExport);
 
@@ -4368,6 +4370,22 @@ void ScExportTest::testTdf125173XLSX()
     CPPUNIT_ASSERT(pXmlRels);
     assertXPath(pXmlRels, "/r:Relationships/r:Relationship[@Id='rId1']", "Target", "http://www.google.com/");
     assertXPath(pXmlRels, "/r:Relationships/r:Relationship[@Id='rId1']", "TargetMode", "External");
+}
+
+void ScExportTest::testTdf79972XLSX()
+{
+    ScDocShellRef xDocSh = loadDoc("tdf79972.", FORMAT_XLSX);
+    CPPUNIT_ASSERT(xDocSh.is());
+    std::shared_ptr<utl::TempFile> pXPathFile = ScBootstrapFixture::exportTo(&(*xDocSh), FORMAT_XLSX);
+
+    xmlDocPtr pDoc = XPathHelper::parseExport(pXPathFile, m_xSFactory, "xl/worksheets/sheet1.xml");
+    CPPUNIT_ASSERT(pDoc);
+    assertXPath(pDoc, "/x:worksheet/x:hyperlinks/x:hyperlink", "ref", "A1");
+
+    xmlDocPtr pXmlRels = XPathHelper::parseExport(pXPathFile, m_xSFactory, "xl/worksheets/_rels/sheet1.xml.rels");
+    CPPUNIT_ASSERT(pXmlRels);
+    assertXPath(pXmlRels, "/r:Relationships/r:Relationship", "Target", "https://bugs.documentfoundation.org/show_bug.cgi?id=79972");
+    assertXPath(pXmlRels, "/r:Relationships/r:Relationship", "TargetMode", "External");
 }
 
 CPPUNIT_TEST_SUITE_REGISTRATION(ScExportTest);
